--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@emotion/styled": "^11.14.0",
     "@mui/base": "^5.0.0-beta.70",
     "@mui/lab": "^7.0.0-beta.9",
-    "@mui/material": "^7.0.0",
+    "@mui/material": "^7.0.1",
+    "@mui/styled-engine-sc": "^7.0.1",
     "@types/react-router-dom": "^5.3.3",
     "next": "^15.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^7.4.0"
+    "react-router-dom": "^7.4.0",
+    "styled-components": "^6.1.17"
   },
   "devDependencies": {
     "@types/node": "^20.11.0",
