--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/lab": "^7.0.0-beta.9",
     "@mui/material": "^7.0.1",
     "@mui/styled-engine-sc": "^7.0.1",
+    "@reduxjs/toolkit": "^2.7.0",
     "@types/react-router-dom": "^5.3.3",
     "next": "^15.0.0",
     "react": "^18.2.0",
