kim@nh test dang nhap

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -37,6 +37,9 @@
       "@context/*": [
         "src/context/*"
       ],
+      "@features/*": [
+        "src/features/*"
+      ],
     },
     "lib": [
       "dom",
