--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next": "^15.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.4.0",
     "styled-components": "^6.1.17"
   },
