kim@nh refactor api

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -40,6 +40,9 @@
       "@features/*": [
         "src/features/*"
       ],
+      "@apis/*": [
+        "src/apis/*"
+      ],
     },
     "lib": [
       "dom",
