kim@nh xoa thu muc lib va them thu muc redux

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -37,8 +37,8 @@
       "@context/*": [
         "src/context/*"
       ],
-      "@lib/*": [
-        "src/lib/*"
+      "@redux/*": [
+        "src/redux/*"
       ],
       "@apis/*": [
         "src/apis/*"
