--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@mui/lab": "^7.0.0-beta.9",
     "@mui/material": "^7.0.1",
     "@mui/styled-engine-sc": "^7.0.1",
+    "@mui/x-date-pickers": "^8.5.1",
     "@reduxjs/toolkit": "^2.7.0",
     "@types/react-router-dom": "^5.3.3",
+    "moment": "^2.30.1",
     "next": "^15.0.0",
     "next-auth": "^4.24.11",
     "react": "^18.2.0",
